--- a/async-race/async-race/src/components/car-settings/car-settings.scss
+++ b/async-race/async-race/src/components/car-settings/car-settings.scss
@@ -5,3 +5,16 @@
 .btn-size-lg {
   width: 210px;
 }
+
+.car-setting__input {
+  max-width: 200px;
+}
+
+.car-setting__color {
+  max-width: 70px;
+  height: auto;
+}
+
+.btn-size-normal {
+  width: 120px;
+}
