--- a/async-race/async-race/src/components/car-container/car-container.scss
+++ b/async-race/async-race/src/components/car-container/car-container.scss
@@ -7,6 +7,11 @@
   height: auto;
 }
 
+.car-sm {
+  width: 50px;
+  height: auto;
+}
+
 .car-container__track {
   position: relative;
   flex: 1 1 auto;
